# Rust-RestApi-Tweets

./: .env  Cargo.toml  readme.md
migrations/2021-01-16-005535_create_tweets/: down.sql  up.sql
src/: like.rs  main.rs  tweet.rs
