[package]
name = "rust-restapi-tweets"
version = "0.1.0"
authors = ["GuilhermeDeconto <deconto100@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "1.1.1"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "1.4"
env_logger = "0.8.2"
lazy_static = "1.4"
listenfd = "0.3.3"
log = "0.4.13"
serde = "1.0.119"
serde_json = "1.0.44"
r2d2 = "0.8.9"
uuid = { version = "0.6.5", features = ["serde", "v4"] }